# Bloblite

./: .coverage  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  ROADMAP.md  coverage.xml  pyproject.toml  requirements-dev.txt  requirements-lock.txt  setup.cfg
.github/workflows/: test.yml
bloblite/: cli.py  storage.py
bloblite/sdk/: blob_service_client.py  container_client.py
examples/: main.py
src/bloblite/: storage.py
src/bloblite/sdk/: blob_service_client.py  container_client.py
tests/: conftest.py  test_cli.py  test_edge_cases.py  test_sdk.py  test_storage.py
