[project]
name = "bloblite"
version = "0.1.0"
description = "Local, lightweight simulation of Azure Blob Storage"
authors = [{ name="Santiago Sanchez", email="santiago.sanchezl123@outlook.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["bloblite"]  # 🔥 Asegúrate de tener esto

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# E: pycodestyle (estilo PEP8)
# F: pyflakes (errores lógicos)
# I: isort (orden de imports)
# UP: pyupgrade (uso de features modernos)

ignore = [
  "E501",  # Ignora long lines > 100 si prefieres (ya lo manejas con line-length)
]

[tool.ruff.format]
quote-style = "double"  # "single" también válido
indent-style = "space"
line-ending = "auto"
