[metadata]
name = bloblite
version = 1.0.0
author = Santiago Sanchez
author_email = santiago.sanchezl123@outlook.com
description = Local, minimal Azure Blob Storage emulator for developers and learners
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ESanchezL469/Bloblite
project_urls =
    Documentation = https://github.com/ESanchezL469/Bloblite
    Source = https://github.com/ESanchezL469/Bloblite
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10

[options.entry_points]
console_scripts =
    bloblite = bloblite.cli:main

[options.package_data]
bloblite = *.json

[coverage:run]
omit =
    tests/*